--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ install:
   - pip install -r requirements.txt --use-mirrors
   - pip install pep8 --use-mirrors
 before_script:
-  - "pep8 --ignore=E501,E225 ."
+  - "pep8 --ignore=E501,E225 --exclude=registration ."
 
 script: python setup.py test
